# deplonator

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 54917aaf4883_initial_migration_create_projects_table.py  add_error_tracking_fields.py  add_last_error_message_field.py  add_last_modification_at_field.py  add_system_dependencies_field.py  fix_timezone_timestamps.py
src/: __init__.py  database.py  main.py  models.py  schemas.py
src/services/: __init__.py  deployment_service.py  file_service.py  project_service.py
src/templates/: base.html  index.html  project_detail.html  projects.html
static/css/: style.css
static/js/: app.js
templates/: base.html  project_detail.html  projects.html
